# ExpressionPolynomParser

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
UI/: CMakeLists.txt  MainForm.cpp  MainForm.h  MainWindow.cpp  MainWindow.h  MainWindow.resx  MyForm.cpp  MyForm.h  MyForm1.h  TestingPolynoms.h  utilities.cpp
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  polynoms.sln
build2/UI/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  UI.sln  UI.vcxproj  UI.vcxproj.filters  cmake_install.cmake
build2/gtest/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
build2/include/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  polynoms.vcxproj  polynoms.vcxproj.filters
build2/samples/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  samples.sln  samples.vcxproj  samples.vcxproj.filters
build2/test/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test_polynoms.vcxproj  test_polynoms.vcxproj.filters
containers/: AVL-tree.h  CMakeLists.txt  Red-Black-trees.h  hash-table(chaining).h  hash-table(open-adressing).h  ordered-table.h  unordered-table.h
expressions/: CMakeLists.txt  expression.h  expression_samples.cpp  expressions.cpp
include/: CMakeLists.txt  list.h  monom.h  polynom.h
list/: CMakeLists.txt  list.h
samples/: CMakeLists.txt  sample_polynoms.cpp
test/: CMakeLists.txt  test_RBTree.cpp  test_avl_tree.cpp  test_expressions.cpp  test_hash_table_chaining.cpp  test_hash_table_open_adressing.cpp  test_main.cpp  test_monoms.cpp  test_ordered_table.cpp  test_polynoms.cpp  test_unordered_table.cpp
